// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress Circle change with animation 1`] = `
<svg
  class="rc-progress-circle"
  role="presentation"
  viewBox="0 0 100 100"
>
  <circle
    class="rc-progress-circle-trail"
    cx="50"
    cy="50"
    r="49.5"
    stroke="#D9D9D9"
    stroke-linecap="round"
    stroke-width="1"
    style="stroke: #D9D9D9; stroke-dasharray: 311.01767270538954px 311.01767270538954; stroke-dashoffset: 0; transform: rotate(-90deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0;"
  />
  <circle
    class="rc-progress-circle-path"
    cx="50"
    cy="50"
    opacity="1"
    r="49.5"
    stroke-linecap="round"
    stroke-width="1"
    style="stroke: #2db7f5; stroke-dasharray: 311.01767270538954px 311.01767270538954; stroke-dashoffset: 311.00767270538955; transform: rotate(-90deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: .3s, .3s, .3s, .06s;"
  />
</svg>
`;

exports[`Progress Circle change with animation 2`] = `
<svg
  class="rc-progress-circle"
  role="presentation"
  viewBox="0 0 100 100"
>
  <circle
    class="rc-progress-circle-trail"
    cx="50"
    cy="50"
    r="49.5"
    stroke="#D9D9D9"
    stroke-linecap="round"
    stroke-width="1"
    style="stroke: #D9D9D9; stroke-dasharray: 311.01767270538954px 311.01767270538954; stroke-dashoffset: 0; transform: rotate(-90deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0;"
  />
  <circle
    class="rc-progress-circle-path"
    cx="50"
    cy="50"
    opacity="1"
    r="49.5"
    stroke-linecap="round"
    stroke-width="1"
    style="stroke: #2db7f5; stroke-dasharray: 311.01767270538954px 311.01767270538954; stroke-dashoffset: 218.21237089377266; transform: rotate(-90deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
  />
</svg>
`;

exports[`Progress Circle should gradient works and circles have different gradient IDs 1`] = `
<div>
  <svg
    class="rc-progress-circle"
    role="presentation"
    viewBox="0 0 100 100"
  >
    <circle
      class="rc-progress-circle-trail"
      cx="50"
      cy="50"
      r="47"
      stroke="#D9D9D9"
      stroke-linecap="butt"
      stroke-width="1"
      style="stroke: #D9D9D9; stroke-dasharray: 295.3097094374406px 295.3097094374406; stroke-dashoffset: 0; transform: rotate(-90deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0;"
    />
    <mask
      id="test-id-gradient-conic"
    >
      <circle
        class="rc-progress-circle-path"
        cx="50"
        cy="50"
        opacity="1"
        r="47"
        stroke="#FFF"
        stroke-linecap="butt"
        stroke-width="6"
        style="stroke-dasharray: 295.3097094374406px 295.3097094374406; stroke-dashoffset: 29.53097094374406; transform: rotate(-90deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: .3s, .3s, .3s, .06s;"
      />
    </mask>
    <foreignobject
      height="100"
      mask="url(#test-id-gradient-conic)"
      width="100"
      x="0"
      y="0"
    >
      <div
        style="width: 100%; height: 100%;"
      >
        <div
          style="width: 100%; height: 100%;"
        />
      </div>
    </foreignobject>
  </svg>
  <svg
    class="rc-progress-circle"
    role="presentation"
    viewBox="0 0 100 100"
  >
    <circle
      class="rc-progress-circle-trail"
      cx="50"
      cy="50"
      r="47"
      stroke="#D9D9D9"
      stroke-linecap="butt"
      stroke-width="1"
      style="stroke: #D9D9D9; stroke-dasharray: 295.3097094374406px 295.3097094374406; stroke-dashoffset: 0; transform: rotate(-90deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0;"
    />
    <mask
      id="test-id-gradient-conic"
    >
      <circle
        class="rc-progress-circle-path"
        cx="50"
        cy="50"
        opacity="1"
        r="47"
        stroke="#FFF"
        stroke-linecap="butt"
        stroke-width="6"
        style="stroke-dasharray: 295.3097094374406px 295.3097094374406; stroke-dashoffset: 29.53097094374406; transform: rotate(-90deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: .3s, .3s, .3s, .06s;"
      />
    </mask>
    <foreignobject
      height="100"
      mask="url(#test-id-gradient-conic)"
      width="100"
      x="0"
      y="0"
    >
      <div
        style="width: 100%; height: 100%;"
      >
        <div
          style="width: 100%; height: 100%;"
        />
      </div>
    </foreignobject>
  </svg>
</div>
`;

exports[`Progress Circle should show right gapPosition 1`] = `
<div>
  <svg
    class="rc-progress-circle"
    role="presentation"
    viewBox="0 0 100 100"
  >
    <circle
      class="rc-progress-circle-trail"
      cx="50"
      cy="50"
      r="47"
      stroke="#D9D9D9"
      stroke-linecap="square"
      stroke-width="1"
      style="stroke: #D9D9D9; stroke-dasharray: 237.88837704682715px 295.3097094374406; stroke-dashoffset: 0; transform: rotate(305deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0;"
    />
    <circle
      class="rc-progress-circle-path"
      cx="50"
      cy="50"
      opacity="1"
      r="47"
      stroke-linecap="square"
      stroke-width="6"
      style="stroke: #2db7f5; stroke-dasharray: 237.88837704682715px 295.3097094374406; stroke-dashoffset: 166.52186393277898; transform: rotate(305deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: .3s, .3s, .3s, .06s;"
    />
  </svg>
  <svg
    class="rc-progress-circle"
    role="presentation"
    viewBox="0 0 100 100"
  >
    <circle
      class="rc-progress-circle-trail"
      cx="50"
      cy="50"
      r="47"
      stroke="#D9D9D9"
      stroke-linecap="square"
      stroke-width="1"
      style="stroke: #D9D9D9; stroke-dasharray: 237.88837704682715px 295.3097094374406; stroke-dashoffset: 0; transform: rotate(125deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0;"
    />
    <circle
      class="rc-progress-circle-path"
      cx="50"
      cy="50"
      opacity="1"
      r="47"
      stroke-linecap="square"
      stroke-width="6"
      style="stroke: #2db7f5; stroke-dasharray: 237.88837704682715px 295.3097094374406; stroke-dashoffset: 166.52186393277898; transform: rotate(125deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: .3s, .3s, .3s, .06s;"
    />
  </svg>
  <svg
    class="rc-progress-circle"
    role="presentation"
    viewBox="0 0 100 100"
  >
    <circle
      class="rc-progress-circle-trail"
      cx="50"
      cy="50"
      r="47"
      stroke="#D9D9D9"
      stroke-linecap="square"
      stroke-width="1"
      style="stroke: #D9D9D9; stroke-dasharray: 237.88837704682715px 295.3097094374406; stroke-dashoffset: 0; transform: rotate(215deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0;"
    />
    <circle
      class="rc-progress-circle-path"
      cx="50"
      cy="50"
      opacity="1"
      r="47"
      stroke-linecap="square"
      stroke-width="6"
      style="stroke: #2db7f5; stroke-dasharray: 237.88837704682715px 295.3097094374406; stroke-dashoffset: 166.52186393277898; transform: rotate(215deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: .3s, .3s, .3s, .06s;"
    />
  </svg>
  <svg
    class="rc-progress-circle"
    role="presentation"
    viewBox="0 0 100 100"
  >
    <circle
      class="rc-progress-circle-trail"
      cx="50"
      cy="50"
      r="47"
      stroke="#D9D9D9"
      stroke-linecap="square"
      stroke-width="1"
      style="stroke: #D9D9D9; stroke-dasharray: 237.88837704682715px 295.3097094374406; stroke-dashoffset: 0; transform: rotate(35deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0;"
    />
    <circle
      class="rc-progress-circle-path"
      cx="50"
      cy="50"
      opacity="1"
      r="47"
      stroke-linecap="square"
      stroke-width="6"
      style="stroke: #2db7f5; stroke-dasharray: 237.88837704682715px 295.3097094374406; stroke-dashoffset: 166.52186393277898; transform: rotate(35deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: .3s, .3s, .3s, .06s;"
    />
  </svg>
  <svg
    class="rc-progress-circle"
    role="presentation"
    viewBox="0 0 100 100"
  >
    <circle
      class="rc-progress-circle-trail"
      cx="50"
      cy="50"
      r="47"
      stroke="#D9D9D9"
      stroke-linecap="round"
      stroke-width="1"
      style="stroke: #D9D9D9; stroke-dasharray: 237.88837704682715px 295.3097094374406; stroke-dashoffset: 0; transform: rotate(305deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0;"
    />
    <circle
      class="rc-progress-circle-path"
      cx="50"
      cy="50"
      opacity="1"
      r="47"
      stroke-linecap="round"
      stroke-width="6"
      style="stroke: #2db7f5; stroke-dasharray: 237.88837704682715px 295.3097094374406; stroke-dashoffset: 169.52186393277898; transform: rotate(305deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: .3s, .3s, .3s, .06s;"
    />
  </svg>
  <svg
    class="rc-progress-circle"
    role="presentation"
    viewBox="0 0 100 100"
  >
    <circle
      class="rc-progress-circle-trail"
      cx="50"
      cy="50"
      r="47"
      stroke="#D9D9D9"
      stroke-linecap="round"
      stroke-width="1"
      style="stroke: #D9D9D9; stroke-dasharray: 237.88837704682715px 295.3097094374406; stroke-dashoffset: 0; transform: rotate(305deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0;"
    />
    <circle
      class="rc-progress-circle-path"
      cx="50"
      cy="50"
      opacity="1"
      r="47"
      stroke-linecap="round"
      stroke-width="6"
      style="stroke: #2db7f5; stroke-dasharray: 237.88837704682715px 295.3097094374406; stroke-dashoffset: 169.52186393277898; transform: rotate(305deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: .3s, .3s, .3s, .06s;"
    />
  </svg>
</div>
`;

exports[`Progress Diff Line should match snapshot 1`] = `
<div>
  <svg
    class="rc-progress-line"
    preserveAspectRatio="none"
    viewBox="0 0 100 1"
  >
    <path
      class="rc-progress-line-trail"
      d="M 0,0.5
         L 100,0.5"
      fill-opacity="0"
      stroke="#D9D9D9"
      stroke-linecap="butt"
      stroke-width="1"
    />
    <path
      class="rc-progress-line-path"
      d="M 0,0.5
         L 100,0.5"
      fill-opacity="0"
      stroke="#2db7f5"
      stroke-linecap="butt"
      stroke-width="1"
      style="stroke-dasharray: 20px, 100px; stroke-dashoffset: -0px; transition: stroke-dashoffset 0.3s ease 0s, stroke-dasharray .3s ease 0s, stroke 0.3s linear; transition-duration: .3s, .3s, .3s, .06s;"
    />
  </svg>
  <br />
  <svg
    class="rc-progress-line"
    preserveAspectRatio="none"
    viewBox="0 0 100 1"
  >
    <path
      class="rc-progress-line-trail"
      d="M 0.5,0.5
         L 99.5,0.5"
      fill-opacity="0"
      stroke="#D9D9D9"
      stroke-linecap="round"
      stroke-width="1"
    />
    <path
      class="rc-progress-line-path"
      d="M 0.5,0.5
         L 99.5,0.5"
      fill-opacity="0"
      stroke="#2db7f5"
      stroke-linecap="round"
      stroke-width="1"
      style="stroke-dasharray: 19.8px, 100px; stroke-dashoffset: -0px; transition: stroke-dashoffset 0.3s ease 0s, stroke-dasharray .3s ease 0s, stroke 0.3s linear; transition-duration: .3s, .3s, .3s, .06s;"
    />
  </svg>
  <br />
  <svg
    class="rc-progress-line"
    preserveAspectRatio="none"
    viewBox="0 0 100 1"
  >
    <path
      class="rc-progress-line-trail"
      d="M 0,0.5
         L 100,0.5"
      fill-opacity="0"
      stroke="#D9D9D9"
      stroke-linecap="square"
      stroke-width="1"
    />
    <path
      class="rc-progress-line-path"
      d="M 0,0.5
         L 100,0.5"
      fill-opacity="0"
      stroke="#2db7f5"
      stroke-linecap="square"
      stroke-width="1"
      style="stroke-dasharray: 19.9px, 100px; stroke-dashoffset: -0px; transition: stroke-dashoffset 0.3s ease 0s, stroke-dasharray .3s ease 0s, stroke 0.3s linear; transition-duration: .3s, .3s, .3s, .06s;"
    />
  </svg>
</div>
`;

exports[`Progress Line change with animation 1`] = `
<svg
  class="rc-progress-line"
  preserveAspectRatio="none"
  viewBox="0 0 100 1"
>
  <path
    class="rc-progress-line-trail"
    d="M 0.5,0.5
         L 99.5,0.5"
    fill-opacity="0"
    stroke="#D9D9D9"
    stroke-linecap="round"
    stroke-width="1"
  />
  <path
    class="rc-progress-line-path"
    d="M 0.5,0.5
         L 99.5,0.5"
    fill-opacity="0"
    stroke="#2db7f5"
    stroke-linecap="round"
    stroke-width="1"
    style="stroke-dasharray: 0px, 100px; stroke-dashoffset: -0px; transition: stroke-dashoffset 0.3s ease 0s, stroke-dasharray .3s ease 0s, stroke 0.3s linear; transition-duration: .3s, .3s, .3s, .06s;"
  />
</svg>
`;

exports[`Progress Line change with animation 2`] = `
<svg
  class="rc-progress-line"
  preserveAspectRatio="none"
  viewBox="0 0 100 1"
>
  <path
    class="rc-progress-line-trail"
    d="M 0.5,0.5
         L 99.5,0.5"
    fill-opacity="0"
    stroke="#D9D9D9"
    stroke-linecap="round"
    stroke-width="1"
  />
  <path
    class="rc-progress-line-path"
    d="M 0.5,0.5
         L 99.5,0.5"
    fill-opacity="0"
    stroke="#2db7f5"
    stroke-linecap="round"
    stroke-width="1"
    style="stroke-dasharray: 29.7px, 100px; stroke-dashoffset: -0px; transition: stroke-dashoffset 0.3s ease 0s, stroke-dasharray .3s ease 0s, stroke 0.3s linear; transition-duration: 0s, 0s;"
  />
</svg>
`;

exports[`Progress should support percentage array changes 1`] = `
<svg
  class="rc-progress-circle"
  data-testid="circle"
  role="presentation"
  viewBox="0 0 100 100"
>
  <circle
    class="rc-progress-circle-trail"
    cx="50"
    cy="50"
    r="49.5"
    stroke="#D9D9D9"
    stroke-linecap="round"
    stroke-width="1"
    style="stroke: #D9D9D9; stroke-dasharray: 311.01767270538954px 311.01767270538954; stroke-dashoffset: 0; transform: rotate(-90deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0;"
  />
  <circle
    class="rc-progress-circle-path"
    cx="50"
    cy="50"
    opacity="1"
    r="49.5"
    stroke-linecap="round"
    stroke-width="1"
    style="stroke: #2db7f5; stroke-dasharray: 311.01767270538954px 311.01767270538954; stroke-dashoffset: 187.11060362323371; transform: rotate(54deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: .3s, .3s, .3s, .06s;"
  />
  <circle
    class="rc-progress-circle-path"
    cx="50"
    cy="50"
    opacity="1"
    r="49.5"
    stroke-linecap="round"
    stroke-width="1"
    style="stroke: #2db7f5; stroke-dasharray: 311.01767270538954px 311.01767270538954; stroke-dashoffset: 187.11060362323371; transform: rotate(-90deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: .3s, .3s, .3s, .06s;"
  />
</svg>
`;

exports[`Progress should support percentage array changes 2`] = `
<svg
  class="rc-progress-circle"
  data-testid="circle"
  role="presentation"
  viewBox="0 0 100 100"
>
  <circle
    class="rc-progress-circle-trail"
    cx="50"
    cy="50"
    r="49.5"
    stroke="#D9D9D9"
    stroke-linecap="round"
    stroke-width="1"
    style="stroke: #D9D9D9; stroke-dasharray: 311.01767270538954px 311.01767270538954; stroke-dashoffset: 0; transform: rotate(-90deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0;"
  />
  <circle
    class="rc-progress-circle-path"
    cx="50"
    cy="50"
    opacity="1"
    r="49.5"
    stroke-linecap="round"
    stroke-width="1"
    style="stroke: #2db7f5; stroke-dasharray: 311.01767270538954px 311.01767270538954; stroke-dashoffset: 249.31413816431166; transform: rotate(126deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
  />
  <circle
    class="rc-progress-circle-path"
    cx="50"
    cy="50"
    opacity="1"
    r="49.5"
    stroke-linecap="round"
    stroke-width="1"
    style="stroke: #2db7f5; stroke-dasharray: 311.01767270538954px 311.01767270538954; stroke-dashoffset: 249.31413816431166; transform: rotate(54deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
  />
  <circle
    class="rc-progress-circle-path"
    cx="50"
    cy="50"
    opacity="1"
    r="49.5"
    stroke-linecap="round"
    stroke-width="1"
    style="stroke: #2db7f5; stroke-dasharray: 311.01767270538954px 311.01767270538954; stroke-dashoffset: 249.31413816431166; transform: rotate(-18deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
  />
  <circle
    class="rc-progress-circle-path"
    cx="50"
    cy="50"
    opacity="1"
    r="49.5"
    stroke-linecap="round"
    stroke-width="1"
    style="stroke: #2db7f5; stroke-dasharray: 311.01767270538954px 311.01767270538954; stroke-dashoffset: 249.31413816431166; transform: rotate(-90deg); transform-origin: 50px 50px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s, opacity .3s ease 0s; fill-opacity: 0; transition-duration: 0s, 0s;"
  />
</svg>
`;
